[project]
name = "chatbot-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chatbot>=1.5.2b0",
    "dotenv>=0.9.9",
    "dotenv-python>=0.0.1",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.26",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "streamlit>=1.46.1",
]
